--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.1",
+    "chai": "^3.5.0",
     "cookie-parser": "^1.4.3",
     "express": "^4.13.4",
     "fs": "0.0.2",
+    "mocha": "^2.5.3",
     "multer": "^1.1.0",
     "path": "^0.12.7",
     "pg": "^5.0.0",
