--- a/package.json
+++ b/package.json
@@ -24,9 +24,7 @@
     "path": "^0.12.7",
     "pg": "^5.0.0",
     "pg-hstore": "^2.3.2",
-    "sequelize": "^3.23.3"
-  },
-  "devDependencies": {
+    "sequelize": "^3.23.3",
     "jenkins-mocha": "^2.6.0"
   }
 }
